# t-cpl

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yaml
CMake/: Macros.cmake  SymbolHiding.cmake
CMake/Toolchains/: Linux_x86.cmake  Windows_x86.cmake
app/: CMakeLists.txt  app.c
examples/: CMakeLists.txt
include/: cproject.h
scripts/: manage.pl
src/: CMakeLists.txt  cproject.c
tests/: CMakeLists.txt
